--- a/mobile/android/unittest_restapi_websocket/app/src/main/res/values/strings.xml
+++ b/mobile/android/unittest_restapi_websocket/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">KD-API-TestApp</string>
+    <string name="app_name">UnitTest</string>
     <string name="api_test_app_title">UnitTest</string>
 </resources>
